# blog-web-application

./: .coverage  .gitignore  AUTHORS  ChangeLog  README.md  celery_runner.py  celerybeat-schedule  config.py  fake_data.py  main.py  manage.py  models.py  requirements.txt  setup.cfg  setup.py  views.py  wt_forms.py
etc/: jmilkfansblog.conf  test_config.py
flask_gzip/: __init__.py  requirements.txt  setup.py
flask_youku/: README.md  __init__.py  setup.py
htmlcov/: index.html  jmilkfansblog___init___py.html  jmilkfansblog_config_py.html  jmilkfansblog_controllers___init___py.html  jmilkfansblog_controllers_admin_py.html  jmilkfansblog_controllers_blog_py.html  jmilkfansblog_controllers_main_py.html  jmilkfansblog_controllers_restful___init___py.html  jmilkfansblog_controllers_restful_auth_py.html  jmilkfansblog_controllers_restful_fields_py.html  jmilkfansblog_controllers_restful_parsers_py.html  jmilkfansblog_controllers_restful_posts_py.html  jmilkfansblog_extensions_py.html  jmilkfansblog_forms_py.html  jmilkfansblog_models_py.html  jmilkfansblog_tasks_py.html  jmilkfansblog_templates___init___py.html  jmilkfansblog_templates_admin___init___py.html  jmilkfansblog_templates_blog___init___py.html  jmilkfansblog_templates_main___init___py.html  status.json
jmilkfansblog/: __init__.py  config.py  extensions.py  forms.py  i18n.py  models.py  tasks.py
jmilkfansblog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
migrations/: alembic.ini
templates/: base.html  home.html  index.html  post.html
tests/: test_urls.py
(+57 files in other folders)
