[metadata]
name = jmilkfansblog
version = 0.1.0
summary = JmilkFan's blog with Python-Flask
descript-file = README.md
author = JmilkFan(Fan Guiju)
author_email = fangui_ju@163.com
classifier = 
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    jmilkfansblog

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pdr]
warnerrors = True
autodoc_tree_index_modules = True

[entry_points]
# Create the console script for jmilkfansblog application
console_scripts =
    jmilkfansblog-api = jmilkfansblog.cmd.api:main
    jmilkfansblog-manager = jmilkfansblog.cmd.manager:main
